# ManhwaBot

./: .gitignore  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  file.py
backend/app/core/: config.py  logger.py  middleware.py
backend/app/models/: chapter.py  comic.py
backend/app/scrapers/: scrape_cap.py  scrape_comic.py
backend/app/services/: pdf_builder.py  telegram_bot.py
postgres/: Dockerfile
workflows/: Dockerfile  n8n_credentials.json  n8n_workflow.json
